--- a/style.css
+++ b/style.css
@@ -48,8 +48,6 @@
     margin-right:10px ;    
 }
 
-
-
 .header__body img{
     background-color: white;
 }
@@ -155,7 +153,74 @@ width: 0;
 
 button:hover {
     cursor: pointer;
+}
 
+.dropMenu{
+    background-color: white;
+}
+
+.dropMenu__header{
+    width: 320px;
+    max-width: 320px;
+    display:flex;
+    padding: 20px 24px;
+    padding-bottom: 34px;
+}
+
+.dropMenu__header__close {
+    padding-right: 20px;
+}
+
+.dropMenu__header__search{
+    padding-right: 44px;
+    margin-left: auto;
+}
+
+.dropMenu__main li{
+    padding: 16px 24px;
+    list-style: none;
+}
+
+.dropMenu a{
+    text-decoration: none;
+    font-family: TT Lakes;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.2px;
+    color: #1B1C21;
+    font-weight: bold;
+}
+
+.dropMenu__main li a{
+    color: rgba(0, 0, 0, 0.2);
+    font-weight: bold;
+}
+
+.fix::before{
+    content: "";
+    height: 32px;
+    width: 4px;
+    background-color: #41F6D7;
+    position: absolute;
+    left:-3px;
+    top: 155px;
+    border: 2px solid white;
+    border-radius: 50%;
+}
+
+.dropMenu__main li a::before{
+    position: absolute;
+    color: #1B1C21;
+    content: attr(data-hover);
+    transition: transform 0.3s, opacity 0.3s;
+}
+.dropMenu__main li  .dropMenu__main__grey::before{
+    color: #7E7E82;
+}
+
+.dropMenu__main li a:hover::before{
+    opacity: 0;
+    transform: scale(0.9);
 }
 @media ( min-width : 768px) and (max-width : 1119.98px){
     .middlegroup{
