almost done dropMenu, not done button styles yet

--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ button:hover {
     display:flex;
     padding: 20px 24px;
     padding-bottom: 34px;
+    box-sizing: border-box;
 }
 
 .dropMenu__header__close {
@@ -172,7 +173,6 @@ button:hover {
 }
 
 .dropMenu__header__search{
-    padding-right: 44px;
     margin-left: auto;
 }
 
@@ -222,6 +222,55 @@ button:hover {
     opacity: 0;
     transform: scale(0.9);
 }
+
+.dropMenu__footer{
+    padding-top: 100px;
+}
+
+.dropMenu__footer__contact__icons.middlegroup{
+    display: flex;
+    height: 60px;
+}
+.dropMenu__footer__contact__icons button{
+    border: 0;
+    background-color: white;
+}
+
+.dropMenu__footer__contact__icons__phone{
+    padding-left: 18px;
+}
+
+.dropMenu__footer__contact__email{
+    padding: 4px 24px ;
+}
+.dropMenu__footer__contact__telephone{
+    padding: 8px 24px;
+}
+
+.dropMenu__footer__contact__telephone a{
+    font-family: TT Lakes;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: bold;
+    letter-spacing: -0.6px;
+}
+
+.dropMenu__footer__lang{
+    display: flex;
+    padding:  32px 24px;
+}
+.dropMenu__footer__lang button{
+    background-color: white;
+    border: 0;
+    font-weight: bold;
+    font-size: 16px;
+    letter-spacing: -0.2px;
+    font-family: TT Lakes;
+}
+.dropMenu__footer__lang__RU__button.grey{
+    color: #7E7E82;
+}
+
 @media ( min-width : 768px) and (max-width : 1119.98px){
     .middlegroup{
         display: flex;
