--- a/style.css
+++ b/style.css
@@ -271,6 +271,11 @@ button:hover {
     color: #7E7E82;
 }
 
+.sepia__filter img:hover{
+    filter: sepia(1);
+    transition-duration: 0.2s;
+}
+
 @media ( min-width : 768px) and (max-width : 1119.98px){
     .middlegroup{
         display: flex;
