--- a/style.css
+++ b/style.css
@@ -276,6 +276,78 @@ button:hover {
     transition-duration: 0.2s;
 }
 
+.brandsRepair__title {
+background: linear-gradient(90deg ,#F8F8F8 50%, #FFFFFF );
+border-top: 1px solid #D9FFF5;
+height: 55px;
+}
+
+
+.brandsRepair__title h2{
+    padding-left: 32px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    position: absolute;
+    margin: 0;
+    text-transform: uppercase;
+    font-size: 16px;
+    line-height: 24px;
+    color: #7E7E82;
+}
+
+.brandsRepair__list__content{
+    display: grid;
+    grid-template-columns: 240px 240px 240px 240px;
+    grid-gap: 32px 16px;
+    justify-content: center;
+    padding-top: 24px;
+}
+
+.brandsRepair__list__content button{
+    width: 240px;
+    height: 72px;
+    display: flex;
+    align-items: center;
+    padding: 16px;
+    border: 0;
+    background-color: white;
+}
+
+.brandsRepair__list__content button img:nth-child(2){
+    margin-left: auto;
+}
+
+.brandsRepair__list__limiter{
+    max-height: 200px;
+    overflow: hidden;
+    position: relative;
+}
+
+.brandsRepair__list__readmore{
+    opacity: 0;
+    position: absolute;
+}
+.brandsRepair__list__readmore:checked ~ .brandsRepair__list__limiter{
+    max-height: none;
+}
+
+.brandsRepair__list__readmore 
+~ .brandsRepair__list__readmore__button::before{
+    content: "»  Показать все";
+    position: absolute;
+    left: 80px;
+}
+
+.brandsRepair__list__readmore:checked 
+~ .brandsRepair__list__readmore__button::before{
+    content: "«  Скрыть";
+    position: absolute;
+    left: 80px;
+    padding-top: 30px;
+}
+
+
+
 @media ( min-width : 768px) and (max-width : 1119.98px){
     .middlegroup{
         display: flex;
@@ -311,6 +383,12 @@ button:hover {
     }
     .header__icon .logo{
         margin-left: 20px;
+    }
+    .brandsRepair__list__content{
+        display: grid;
+        grid-template-columns: 224px 224px 224px;
+        grid-gap: 32px 26px;
+        justify-content: center;
     }
 }
 
