--- a/style.css
+++ b/style.css
@@ -295,59 +295,102 @@ height: 55px;
     color: #7E7E82;
 }
 
-.brandsRepair__list__content{
-    display: grid;
-    grid-template-columns: 240px 240px 240px 240px;
-    grid-gap: 32px 16px;
-    justify-content: center;
-    padding-top: 24px;
-}
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
 
-.brandsRepair__list__content button{
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #F8F8F8;
+
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .swiper-slide button{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     width: 240px;
     height: 72px;
-    display: flex;
-    align-items: center;
-    padding: 16px;
-    border: 0;
+    object-fit: cover;
     background-color: white;
-}
+    border: 0;
+    padding: 16px;
+  }
+  .swiper-slide button img:nth-child(2){
+      margin-left: auto;
+  }
 
-.brandsRepair__list__content button img:nth-child(2){
-    margin-left: auto;
-}
-
-.brandsRepair__list__limiter{
-    max-height: 200px;
-    overflow: hidden;
-    position: relative;
+.swiper-pagination{
+    position: absolute;
+    top: 55px;
 }
 
 .brandsRepair__list__readmore{
-    opacity: 0;
-    position: absolute;
-}
-.brandsRepair__list__readmore:checked ~ .brandsRepair__list__limiter{
-    max-height: none;
+    display: none;
 }
 
-.brandsRepair__list__readmore 
-~ .brandsRepair__list__readmore__button::before{
-    content: "»  Показать все";
-    position: absolute;
-    left: 80px;
-    padding-top: 20px;
+@media ( min-width : 768px){
+    .brandsRepair__list__readmore{
+        display: block;
+    }
+    .swiper-wrapper{
+        display: grid;
+        grid-template-columns: 240px 240px 240px 240px;
+        grid-gap: 32px 16px;
+        justify-content: center;
+        padding-top: 24px;
+    }
+
+    .swiper-wrapper button{
+        width: 240px;
+        height: 72px;
+        display: flex;
+        align-items: center;
+        padding: 16px;
+        border: 0;
+        background-color: white;
+    }
+
+    .brandsRepair__list__content button img:nth-child(2){
+        margin-left: auto;
+    }
+
+    .brandsRepair__list__limiter{
+        max-height: 200px;
+        overflow: hidden;
+        position: relative;
+    }
+
+    .brandsRepair__list__readmore{
+        opacity: 0;
+        position: absolute;
+    }
+    .brandsRepair__list__readmore:checked ~ .brandsRepair__list__limiter{
+        max-height: none;
+    }
+
+    .brandsRepair__list__readmore 
+    ~ .brandsRepair__list__readmore__button::before{
+        content: "»  Показать все";
+        position: absolute;
+        left: 80px;
+        padding-top: 20px;
+    }
+
+    .brandsRepair__list__readmore:checked 
+    ~ .brandsRepair__list__readmore__button::before{
+        content: "«  Скрыть";
+        position: absolute;
+        left: 80px;
+        padding-top: 20px;
+    }
 }
-
-.brandsRepair__list__readmore:checked 
-~ .brandsRepair__list__readmore__button::before{
-    content: "«  Скрыть";
-    position: absolute;
-    left: 80px;
-    padding-top: 20px;
-}
-
-
 
 @media ( min-width : 768px) and (max-width : 1119.98px){
     .middlegroup{
