--- a/style.css
+++ b/style.css
@@ -455,6 +455,19 @@ height: 55px;
         align-items: center;
     }
 
+    .priceList__list__grid__container > 
+    div:not(:nth-of-type(1)):not(:nth-of-type(2))::before{
+        box-sizing: border-box;
+        content: "";
+        position: absolute;
+        margin-bottom: 70px;
+        padding-right: 40px;
+        padding-left: 40px;
+        width: 90%;
+        
+        border-top: 1px solid black;
+    }
+
     .priceList__list__grid__container button{
         align-self: flex-end;
         margin-left: auto;
